@@ -38,6 +38,7 @@ Are contained in the source code.
 Well, at the moment they are just tests for the work in progress.
 ## Dependencies and distribution 
 Multitarget project, predefined frameworks for Net Framework 4.5, Net Standard 2.1, Net Core 3.1, and NET 5.0.
+Additionally the Net Standard 2.1 build requires a reference to the external library "System.Text.Encoding.CodePages".
 ## Compiling
 Visual Studio 2019.
 ## Development Status 
